Add glyphicon to each faq

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -2,55 +2,55 @@
   <h2 align="center"> Faq </h2>
   <div class="hr"></div>
   <div class="each-q">
-    <p class="question q1"> How do I get to the venues? </p>
+    <p class="question q1"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> How do I get to the venues? </p>
     <p class="a1"> The easiest way to get to the venues is via car. The best public transport option is through catching a bus to Westfield Queensgate and then catching another bus in the Hutt Hospital direction. It is a very short walk from Boulcott Hospital. The details can be found on "The Wedding" page.</p>
   </div>
   <div class="each-q">
-    <p class="question q2"> What time should I arrive at the ceremony and reception? </p>
+    <p class="question q2"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> What time should I arrive at the ceremony and reception? </p>
     <p class="a2"> Please arrive by 1.15pm to ensure we will start on time at 1.30pm for the ceremony. For the reception, please arrive between 5.30pm and 6pm before the bridal party arrive.</p>
   </div>
   <div class="each-q">
-    <p class="question q3"> What are the parking facilities available at the venues ?</p>
+    <p class="question q3"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> What are the parking facilities available at the venues ?</p>
     <p class="a3"> There is nearby parking at the church and parking right outside the reception venue.</p>
   </div>
   <div class="each-q">
-    <p class="question q4"> How long will the ceremony take?</p>
+    <p class="question q4"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> How long will the ceremony take?</p>
     <p class="a4"> The ceremony will be a traditional Catholic wedding with some traditions from Kerala included. It should take no more than one hour.</p>
   </div>
   <div class="each-q">
-    <p class="question q5"> Does your wedding have a theme?</p>
+    <p class="question q5"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> Does your wedding have a theme?</p>
     <p class="a5"> Yes - pink and silver </p>
   </div>
   <div class="each-q">
-    <p class="question q6"> What is the dress code for the function?</p>
+    <p class="question q6"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> What is the dress code for the function?</p>
     <p class="a6"> Evening wear. This means shirts and pants for guys and cocktail dresses/saris for girls.</p>
   </div>
   <div class="each-q">
-    <p class="question q7"> Are there any colours we should avoid wearing?</p>
+    <p class="question q7"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> Are there any colours we should avoid wearing?</p>
     <p class="a7"> Please avoid wearing white, ivory, black, grey and baby pink so that you do not clash with the bridal party.</p>
   </div>
   <div class="each-q">
-    <p class="question q8"> When do I have to RSVP for the wedding?</p>
+    <p class="question q8"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> When do I have to RSVP for the wedding?</p>
     <p class="a8"> Please RSVP by Friday 20 January so that we can give numbers and preferred meal options to the caterers. Ensure to note down any dietary requirements you may have.</p>
   </div>
   <div class="each-q">
-    <p class="question q9"> Am I allowed to post photos from your wedding on social media?</p>
+    <p class="question q9"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> Am I allowed to post photos from your wedding on social media?</p>
     <p class="a9"> No - please refrain from posting pictures on social media until we have.</p>
   </div>
   <div class="each-q">
-    <p class="question q10"> What gifts would you like?</p>
+    <p class="question q10"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> What gifts would you like?</p>
     <p class="a10"> Please see our Gifts Page it should list all the gifts we would like. There are instructions listed on how to utilise our registry. Your generosity is much appreciated.</p>
   </div>
   <div class="each-q">
-    <p class="question q11"> Will last names be changing after the wedding?</p>
+    <p class="question q11"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> Will last names be changing after the wedding?</p>
     <p class="a11"> Yes</p>
   </div>
   <div class="each-q">
-    <p class="question q12"> When and where are you going to for your honeymoon?</p>
+    <p class="question q12"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> When and where are you going to for your honeymoon?</p>
     <p class="a12"> We are going to Rarotonga for our honeymoon from 27 February - 8 March.</p>
   </div>
   <div class="each-q">
-    <p class="question q13"> I have a question not answered here; how do I contact you? </p>
+    <p class="question q13"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> I have a question not answered here; how do I contact you? </p>
     <p class="a13"> Please send us a message using the Contact page.</p>
   </div>
 </div>
