--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,5 +1,5 @@
-<div class = 'container level-header'>
+<div class = "container level-header">
   <h2> Internal Server Error </h2>
   <p> Looks like something went wrong </p>
-  <%= link_to 'Home', root_path, class: 'btn generic-button command-button' %>
+  <%= link_to "Home", root_path, class: "btn generic-button command-button" %>
 </div>
