--- a/app/views/pages/_main_people.html.erb
+++ b/app/views/pages/_main_people.html.erb
@@ -3,48 +3,16 @@
   <div class="hr"></div>
   <div class="row">
     <div id="owl-demo" class="owl-carousel">
-      <div class="item">
-        <%= image_tag("jeco.jpg", :alt => "Jeco Jacob", width: "100%", height: "100%") %>
-        <div class = "description">
-          <h4> JECO JACOB </h4>
-          <span> Bride's Father </span>
+      <% @main_people.each do |d| %>
+        <div class="item">
+          <% @photo = d["photo"] %>
+          <%= image_tag(@photo, class: "img-responsive") %>
+          <div class = "description">
+            <h4> <%= d["name"] %> </h4>
+            <span> <%= d["title"]%> </span>
+          </div>
         </div>
-      </div>
-      <div class="item">
-        <%= image_tag("beena.jpg", :alt => "Beena Jacob", width: "100%", height: "100%") %>
-        <div class = "description">
-          <h4> BEENA JACOB </h4>
-          <span> Bride's Mother </span>
-        </div>
-      </div>
-      <div class="item">
-        <%= image_tag("tj.jpg", :alt => "Tania Jacob", width: "100%", height: "100%") %>
-        <div class = "description">
-          <h4> TANIA JACOB </h4>
-          <span> Bride </span>
-        </div>
-      </div>
-      <div class="item">
-        <%= image_tag("iw.jpg", :alt => "Iain Walker", width: "100%", height: "100%") %>
-        <div class = "description">
-          <h4> IAIN WALKER </h4>
-          <span> Groom </span>
-        </div>
-      </div>
-      <div class="item">
-        <%= image_tag("lynn.jpg", :alt => "Lynn Walker", width: "100%", height: "100%") %>
-        <div class = "description">
-         <h4> LYNN WALKER </h4>
-          <span> Groom's Mother </span>
-        </div>
-      </div>
-      <div class="item">
-        <%= image_tag("david.jpg", :alt => "David Walker", width: "100%", height: "100%") %>
-        <div class = "description">
-          <h4> DAVID WALKER </h4>
-          <span> Groom's Father </span>
-        </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
