--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,14 +18,19 @@
           <li><%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "hvr-sweep-to-right" %></li>
         <% else %>
           <li class=<%= "active" if current_page?(welcome_path) %>><%= link_to "Home", welcome_path, class: "hvr-sweep-to-right"%></li>
-          <li class=<%= "active" if current_page?(our_story_path) %>><%= link_to "Our Story", our_story_path, class: "hvr-sweep-to-right our-story-button"%></li>
-          <li class=<%= "active" if current_page?(people_path) %>><%= link_to "People", people_path, class: "hvr-sweep-to-right"%></li>
-          <li class=<%= "active" if current_page?(the_details_path) %>><%= link_to "The Wedding", the_details_path, class: "hvr-sweep-to-right"%></li>
-          <li class=<%= "active" if current_page?(accomodation_path) %>><%= link_to "Accomodation", accomodation_path, class: "hvr-sweep-to-right"%></li>
-          <li class=<%= "active" if current_page?(gifts_path) %>><%= link_to "Gifts", gifts_path, class: "hvr-sweep-to-right"%></li>
+          <li class=<%= "active" if current_page?(gifts_path) %>><%= link_to "Gift Registry", gifts_path, class: "hvr-sweep-to-right"%></li>
           <li class=<%= "active" if current_page?(new_rsvp_path) %>><%= link_to "Rsvp", new_rsvp_path, class: "hvr-sweep-to-right" if !current_user %></li>
-          <li class=<%= "active" if current_page?(faq_path) %>><%= link_to "FAQ", faq_path, class: "hvr-sweep-to-right" %></li>
-          <li class=<%= "active" if current_page?(contact_us_path) %>><%= link_to "Contact", contact_us_path, class: "hvr-sweep-to-right" %></li>
+          <li class="dropdown">
+            <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">The Details <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Accomodation", accomodation_path %></li>
+              <li><%= link_to "Contact Us", contact_us_path %></li>
+              <li><%= link_to "FAQ", faq_path %></li>
+              <li><%= link_to "Our Story", our_story_path %></li>
+              <li><%= link_to "People", people_path %></li>
+              <li><%= link_to "The Details", the_details_path %></li>
+            </ul>
+          </li>
         <% end %>
       </ul>
    </div>
