--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -44,14 +44,23 @@
 
 .dropdown-menu  {
     display: none;
-    position: absolute;
+    position: static;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
+    right: 0px;
 }
 
 .dropdown:hover .dropdown-menu {
     display: block;
+}
+
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ 
+  position: float;
+}
+
+@media (min-width:320px) { /* big landscape tablets, laptops, and desktops */ 
+  position: static;
 }
