--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,12 +23,12 @@
           <li class="dropdown">
             <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">The Details <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Accomodation", accomodation_path %></li>
-              <li><%= link_to "Contact Us", contact_us_path %></li>
-              <li><%= link_to "FAQ", faq_path %></li>
-              <li><%= link_to "Our Story", our_story_path %></li>
-              <li><%= link_to "People", people_path %></li>
-              <li><%= link_to "The Details", the_details_path %></li>
+              <li><%= link_to "Accomodation", accomodation_path, class: 'dropdown-link' %></li>
+              <li><%= link_to "Contact Us", contact_us_path, class: 'dropdown-link' %></li>
+              <li><%= link_to "FAQ", faq_path, class: 'dropdown-link' %></li>
+              <li><%= link_to "Our Story", our_story_path, class: 'dropdown-link' %></li>
+              <li><%= link_to "People", people_path, class: 'dropdown-link' %></li>
+              <li><%= link_to "The Details", the_details_path, class: 'dropdown-link' %></li>
             </ul>
           </li>
         <% end %>
