--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -5,3 +5,8 @@ $pink: #b21972;
 $green: #28a428;
 $orange: #e69756;
 $yellow: #ffc400;
+$content-width: 1000px;
+$breakpoint: 800px;
+$nav-height: 70px;
+$nav-background: #262626;
+$nav-font-color: #ffffff;
