--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -156,6 +156,7 @@ nav {
   border-radius: 0px !important;
   background-color: $pink !important;
   font-size: 16px;
+  color: $white;
   font-family: "futura-pt",sans-serif;
   margin-bottom: 10px;
   border-bottom: 0px;
