Fix text to be white for nav

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -12,6 +12,11 @@
 .navigation {
   height: $nav-height;
   background: $pink;
+  color: $white;
+}
+
+.navbar-default .navbar-brand {
+  color: $black;
 }
 
 // Container with no padding for navbar
