dropdown list white colour text

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -40,6 +40,7 @@ nav {
     li {
       float: left;
       position: relative;
+      color: $white;
       a,
       a:visited {
         display: block;
