--- a/app/views/cgs/_form.html.erb
+++ b/app/views/cgs/_form.html.erb
@@ -4,11 +4,7 @@
     <%= f.alert_message "Please fix the errors below." %>
     <%= f.text_field :guest_names, placeholder: "Enter your names", class: "form-control required", control_col: "col-sm-8", autofocus: true, label: "Guest Names" %>
     <%= f.number_field :contribution_amount, placeholder: 
-    "Enter Contribution Amount", label: 'Contribution Amount', control_col: "col-sm-8" if @gift.contributable %>
-    <%= f.number_field :quantity_contributed, placeholder: "Enter Quantity", label: "Quantity", control_col: "col-sm-8", min: 1, max: @gift.remainder_available if !@gift.contributable && @gift.remainder_available > 1 %>
-    <%= f.hidden_field :item_name, value: @gift.name %>
-    <%= f.hidden_field :gift_id, value: @gift.id %>
-
+    "Enter Contribution Amount", label: 'Contribution Amount', control_col: "col-sm-8" %>
     <div class="level-header">
       <%= button_tag(type: "submit", class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
