--- a/app/views/gifts/cross_off_gift.js.erb
+++ b/app/views/gifts/cross_off_gift.js.erb
@@ -1,1 +1,1 @@
-$("#modal-window").html("<%= escape_javascript(render "gifts/modal", gift: @gift) %>");
+$("#modal-window").html("<%= escape_javascript(render "gifts/modal") %>");
