--- a/app/views/cgs/_form.html.erb
+++ b/app/views/cgs/_form.html.erb
@@ -9,7 +9,7 @@
       <%= button_tag(type: "submit", class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
       <% end %>      
-      <%= link_to fa_icon("undo", text: "Cancel"), gifts_path, class: "btn generic-button command-button hvr-sweep-to-right" %>
+      <%= link_to fa_icon("undo", text: "Cancel"), gift_registry_path, class: "btn generic-button command-button hvr-sweep-to-right" %>
     </div>
   <% end %>
 </div>
