--- a/app/views/pages/cross_off_gift.js.erb
+++ b/app/views/pages/cross_off_gift.js.erb
@@ -1,1 +1,1 @@
-$("#modal-window").html("<%= escape_javascript(render "gifts/modal") %>");
+$("#modal-window").html("<%= escape_javascript(render "pages/modal") %>");
