Remove align centre attribute and change to common css

--- a/app/views/pages/_bridesmaids.html.erb
+++ b/app/views/pages/_bridesmaids.html.erb
@@ -1,6 +1,6 @@
 <div class = "container">
   <div class="row">
-    <h2 align="center">Bridesmaids</h2>
+    <h2>Bridesmaids</h2>
     <div class="hr"></div>
     <% @bridesmaids.each do |b| %>
       <div class="col-lg-3 col-lg-1">
