--- a/app/views/pages/_main_people.html.erb
+++ b/app/views/pages/_main_people.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 align="center"> People Involved </h2>
+  <h2> People Involved </h2>
   <div class="hr"></div>
   <div class="row">
     <div id="owl-demo" class="owl-carousel">
