--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 align="center"> Faq </h2>
+  <h2> Faq </h2>
   <div class="hr"></div>
   <% @faqs.each do |faq| %>
     <div class="each-q">
