--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 align="center"> The Wedding </h2>
+  <h2> The Wedding </h2>
   <div class="hr"></div>
   <div class="countdown-clock">
     <div class="your-clock"></div>
