--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <h3 align="center"> IAIN WALKER & TANIA JACOB </h3>
+    <h3> IAIN WALKER & TANIA JACOB </h3>
     <h4 class="fine-details"> 25 FEBRUARY 2017 in LOWER HUTT, NEW ZEALAND</h4>
   </div>
   <div>
