--- a/app/assets/stylesheets/_headings.scss
+++ b/app/assets/stylesheets/_headings.scss
@@ -28,6 +28,7 @@ h2 {
   font-size: 50px;
   font-family: "AR", sans-serif; 
   text-transform: uppercase;
+  text-align: center;
 }
 
 .subheading {
