--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -1,6 +1,6 @@
 <div class = "container">
   <div class="row">
-    <h2 align="center">Groomsmen</h2>
+    <h2>Groomsmen</h2>
     <div class="hr"></div>
     <% @groomsmen.each do |b| %>
       <div class="col-lg-3 col-lg-1">
