--- a/app/views/pages/_wedding_party.html.erb
+++ b/app/views/pages/_wedding_party.html.erb
@@ -1,6 +1,6 @@
 <div class = "container">
   <div class="row">
-    <h2 align="center">Wedding Party</h2>
+    <h2>Wedding Party</h2>
     <div class="hr"></div>
     <% @wedding_party.each do |b| %>
       <div class="col-lg-3 col-lg-1">
