--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 align="center"> Accomodation </h2>
+  <h2> Accomodation </h2>
   <div class="hr"></div>
   <div class="row">
     <div class="col-sm-4 col-xs-12">
