--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="container">
-    <h2 align="center"> Our Story </h2>
+    <h2> Our Story </h2>
     <div class="hr"></div>
   </div>
    <section class="timeline">
