--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -1,14 +1,14 @@
-a:link { 
-  color: $black;
+a:link {
+  color: $white;
 }
-a:visited { 
-  color: $black;
+a:visited {
+  color: $white;
 }
-a:hover { 
-  color: $black;
+a:hover {
+  color: $white;
 }
-a:active { 
-  color: $black;
+a:active {
+  color: $white;
 }
 
 .generic-button {
