--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,19 +9,19 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
+ *= require bootstrap-theme.css
+ *= require bootstrap.scss
  *= require owl.carousel
  *= require owl.theme
  */
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import "font-awesome";
 @import "variables";
 @import "navbar";
 @import "buttons";
 @import "headings";
+@import "fonts";
 @import "timeline";
 @import "forms";
-@import "fonts";
+@import "font-awesome";
 
 .body-style{
   padding-top: 70px;
@@ -35,7 +35,7 @@ body {
 
 .flash{
   background-color: rgba(0, 75, 109, 0.17);
-  font-family: 'Avenir', serif; 
+  font-family: 'Avenir', serif;
   font-size: 18px;
   color: $pink;
   border-radius: 1px;
