--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -8,8 +8,8 @@
     <div class="level-header">
       <%= button_tag(type: "submit", class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
-      <% end %>      
-      <%= link_to fa_icon("undo", text: "Cancel"), guests_path, class: "btn generic-button command-button hvr-sweep-to-right" %>
+      <% end %>
+      <%= link_to fa_icon("undo", text: "Cancel"), guests_path %>
     </div>
   <% end %>
 </div>
