--- a/app/views/pages/_wedding_party.html.erb
+++ b/app/views/pages/_wedding_party.html.erb
@@ -6,12 +6,12 @@
       <div class="col-lg-3 col-lg-1">
         <div class="people-item">
           <% @photo = b["photo"] %>
-          <%= image_tag(@photo, class: "img-responsive") %>
+          <%#= image_tag(@photo, class: "img-responsive") %>
           <div class="description">
             <h3><%=b["name"]%></h3>
           </div>
         </div>
       </div>
     <% end%>
-  </div> 
+  </div>
 </div>
