--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -2,7 +2,7 @@
 <div class="container level-header">
   <h2> Contact Us </h2>
   <p> Feel free to get in touch with us below if you have any questions or something to share </p>
-  <%= bootstrap_form_for(@message, layout: :horizontal)  do |f| %>
+  <%= bootstrap_form_for(@message, url: messages_path, layout: :horizontal)  do |f| %>
     <%= f.hidden_field :message_subject, value: "QUESTION ABOUT THE WEDDING"%>
     <%= f.text_area :full_name, label: "Your Full Name" %>
     <%= f.text_area :email, label: "Your Email" %>
