--- a/app/views/pages/gift_registry.html.erb
+++ b/app/views/pages/gift_registry.html.erb
@@ -4,11 +4,11 @@
     <div class="hr"></div>
     <p>We’ve been asked what we’d like for a gift and the answer is simple: you, at our wedding, having a great time. But if you insist then we’ll say what we’d also love is the most amazing honeymoon. We are off to the Cook Islands for our honeymoon. We are planning to stay there for 10 days (5 nights in Rarotonga and then 4 nights in Aitutaki).</p>
     <p> During our honeymoon we plan on going on lagoon cruises, pamper treatments, quad bike adventures, kayaking, snorkelling and stand up paddle boarding and of course having some great cocktails and food. </p>
-    <p> If you would like to help us with that, then please click the contribute now button and record your name and the amount you will contribute via Online Banking. This will help us easily see who has contributed what. </p> 
+    <p> If you would like to help us with that, then please click the contribute now button and record your name and the amount you will contribute via Online Banking. This will help us easily see who has contributed what. </p>
 
     <p>Our account number is <i> 03-0515-0011251-01 (IAIN RHODES WALKER & TANIA LILIAN JACOB) </i>. Please record your name in the Reference field whilst transferring your contribution. We really appreciate your generosity and look forward to seeing you on February 25th. If you have any questions please feel free to contact us via this website. </p>
     <p> Love Iain and Tania </p>
+    <p><%= link_to "Choose Gift", cross_off_gift_path, class: "btn cross-off-gift-button generic-button" , id: "cross-gift-link", remote: :true, data: { toggle: "modal", target: "#modal-window" } %></p>
   </div>
-  <%= link_to "Choose Gift", cross_off_gift_path, class: "btn cross-off-gift-button generic-button" , id: "cross-gift-link", remote: :true, data: { toggle: "modal", target: "#modal-window" } %>
   <div id="modal-window" class="modal" role="dialog" aria-labelledby="myModalLabel" ></div>
-  </div>
+</div>
