--- a/app/views/pages/people.html.erb
+++ b/app/views/pages/people.html.erb
@@ -5,10 +5,7 @@
   <div class="wedding-party">
     <%= render "pages/wedding_party" %>
   </div>
-  <div class= "bridesmaids">
-    <%= render "pages/bridesmaids" %>
-  </div>
-  <div class="groomsmen">
-    <%= render "pages/groomsmen" %>
+  <div class= "bridesmaids-groomsmen">
+    <%= render "pages/bridesmaids_groomsmen" %>
   </div>
 </div>
