--- a/app/assets/stylesheets/headings.scss
+++ b/app/assets/stylesheets/headings.scss
@@ -26,7 +26,7 @@
 h2 {
   color: $pink;
   font-size: 50px;
-  font-family: "AR", sans-serif; 
+  font-family: "AR", sans-serif;
   text-transform: uppercase;
   text-align: center;
 }
@@ -68,4 +68,14 @@ h3 {
 
 h4 {
   font-size: 25px;
+  color: $pink;
+}
+
+h5 {
+  color: $pink;
+  font-style: italic;
+}
+
+.bridesmaids-groomsmen {
+  padding-top: 30px;
 }
