General tidy up

--- a/app/views/pages/_modal.html.erb
+++ b/app/views/pages/_modal.html.erb
@@ -3,7 +3,8 @@
     <h3 id="myModalLabel modal-heading-style">Contribute to Honeymoon</h3>
   </div>
   <div class="modal-body">
-    <p>Great! Thank you for choosing to contribute towards Iain and Tania's honeymoon. Please enter your name(s) and the amount you wish to contribute so that we can have a written record of everyone"s gifts.</p>
+    <p>Thank you for choosing to contribute towards Iain and Tania's honeymoon. Please record your name(s) and contribution amount so that we can have a written record of everyone"s gifts.</p>
+    <p>Then you can transfer the money you wish to contribute via Online Banking</p>
     <%= render "cgs/form" %>
   </div>
 </div>
