--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <li class=<%= "active" if current_page?(gift_registry_path) %>><%= link_to "Gift Registry", gift_registry_path, class: "hvr-sweep-to-right"%></li>
         <li class=<%= "active" if current_page?(new_rsvp_path) %>><%= link_to "Rsvp", new_rsvp_path, class: "hvr-sweep-to-right" if !current_user %></li>
         <li>
-          <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">The Details </a>
+          <a href="#" class="dropdown-title" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">The Details</a>
           <ul class="nav-dropdown">
             <li><%= link_to "Accomodation", accomodation_path, class: 'dropdown-link' %></li>
             <li><%= link_to "Contact Us", contact_us_path, class: 'dropdown-link' %></li>
