Update reference to form

--- a/app/views/pages/_modal.html.erb
+++ b/app/views/pages/_modal.html.erb
@@ -5,6 +5,6 @@
   <div class="modal-body">
     <p>Thank you for choosing to contribute towards Iain and Tania's honeymoon. Please record your name(s) and contribution amount so that we can have a written record of everyone"s gifts.</p>
     <p>Then you can transfer the money you wish to contribute via Online Banking</p>
-    <%= render "cgs/form" %>
+    <%= render "contributions/form" %>
   </div>
 </div>
