Make JS classes smaller and remove font awesome

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -38,7 +38,7 @@ a:active {
   width: 14.5rem;
 }
 
-#cross-gift-link, #send-message-link, #rsvp-submit-link {
+#cross-gift-link, #send-message-link, #rsvp-submit-link, #save-contribution-link {
  width: 15.0rem;
  height: 3.0rem;
  font-size: 1.2rem;
