--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -7,9 +7,9 @@
     <%= f.select :age_category, ["adult", "child", "toddler" ], :prompt => "Select Dessert Preference", class: "form-control", label: "Dessert Preference" %>
     <div class="level-header">
       <%= button_tag(type: "submit", class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
-        <i class="fa fa-save"></i> Save
+        <i class="glyphicon glyphicon-floppy-saved"></i> Save
       <% end %>
-      <%= link_to fa_icon("undo", text: "Cancel"), guests_path %>
+      <%= link_to "Cancel", guests_path %>
     </div>
   <% end %>
 </div>
