--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,8 +1,8 @@
 <div class = "container level-header guest-page">
   <h2> Guest List </h2>
-  <% @guests = locals[:guests] if @guests.nil? %> 
+  <% @guests = locals[:guests] if @guests.nil? %>
   <div class= "pull-right">
-    <%= link_to fa_icon("plus", text: "Add Guest"), new_guest_path, class: "btn generic-button command-button hvr-sweep-to-right", id: "new-guest-link" if current_user && user_signed_in? %>
+    <%= link_to "Add Guest", new_guest_path, class: "btn generic-button command-button hvr-sweep-to-right", id: "new-guest-link" if current_user && user_signed_in? %>
   </div>
   <table class = "table table-striped">
     <thead>
@@ -22,9 +22,9 @@
         <td> <%= guest.age_category %> </td>
         <td> <%= guest.address %> </td>
         <td> <%= guest.email %> </td>
-        <% if current_user && user_signed_in? %> 
-          <td><%= link_to fa_icon("pencil", text:"Edit"), edit_guest_path(id: guest.id), class: "btn generic-button command-button hvr-sweep-to-right", id: "edit-guest-link" %>
-          <%= link_to fa_icon("trash", text: "Delete"), guest_path(guest), method: :delete,
+        <% if current_user && user_signed_in? %>
+          <td><%= link_to "Edit", edit_guest_path(id: guest.id), class: "btn generic-button command-button hvr-sweep-to-right", id: "edit-guest-link" %>
+          <%= link_to "Delete", guest_path(guest), method: :delete,
                 class: "btn generic-button command-button hvr-sweep-to-right", id: "delete-guest-link" %></td>
         <%end%>
       </tr>
