--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -1,8 +1,8 @@
 <div class = "container level-header rsvp-page">
   <h2> Rsvps </h2>
-  <% @rsvps = locals[:guests] if @rsvps.nil? %> 
+  <% @rsvps = locals[:guests] if @rsvps.nil? %>
   <div class= "pull-right">
-    <%= link_to fa_icon("plus", text: "Add RSVP"), new_rsvp_path, class: "btn generic-button command-button hvr-sweep-to-right", id: "new-rsvp-link" if current_user && user_signed_in? %>
+    <%= link_to "Add RSVP", new_rsvp_path, class: "btn generic-button command-button hvr-sweep-to-right", id: "new-rsvp-link" if current_user && user_signed_in? %>
   </div>
   <table class = "table table-striped">
     <thead>
@@ -16,7 +16,7 @@
         <th> Administration </th>
       <% end %>
     </thead>
-    <% @rsvps.sort_by(&:"#{"id"}").each do |rsvp| %>
+    <% @rsvps.each do |rsvp| %>
       <tr>
         <td> <%= Guest.find(rsvp.guest_id).full_name %> </td>
         <td> "<%= rsvp.email %>" </td>
@@ -24,9 +24,9 @@
         <td> <%= rsvp.main_meal_preference %> </td>
         <td> <%= rsvp.dessert_preference %> </td>
         <td> <%= rsvp.dietary_requirements %> </td>
-        <% if current_user && user_signed_in? %> 
-          <td><%= link_to fa_icon("pencil", text:"Edit"), edit_rsvp_path(id: rsvp.id), class: "btn generic-button command-button hvr-sweep-to-right", id: "edit-rsvp-link" %>
-          <%= link_to fa_icon("trash", text: "Delete"), rsvp_path(rsvp), method: :delete,
+        <% if current_user && user_signed_in? %>
+          <td><%= link_to "Edit", edit_rsvp_path(id: rsvp.id), class: "btn generic-button command-button hvr-sweep-to-right", id: "edit-rsvp-link" %>
+          <%= link_to "Delete", rsvp_path(rsvp), method: :delete,
                 class: "btn generic-button command-button hvr-sweep-to-right", id: "delete-rsvp-link" %></td>
         <%end%>
       </tr>
