--- a/app/assets/stylesheets/headings.scss
+++ b/app/assets/stylesheets/headings.scss
@@ -23,6 +23,10 @@
   text-transform: uppercase;
 }
 
+.rsvp-date {
+  text-align: center;
+  font-style: italics;  
+}
 h2 {
   color: $pink;
   font-size: 50px;
