--- a/app/views/errors/missing_authentication.html.erb
+++ b/app/views/errors/missing_authentication.html.erb
@@ -1,5 +1,5 @@
-<div class = "container level-header">
-  <h2> Authentication Error </h2>
-  <p> Looks like you are not allowed to go to this page </p>
+<div class="container level-header">
+  <h2>Authentication Error</h2>
+  <p>Looks like you are not allowed to go to this page.</p>
   <%= link_to "Home", root_path, class: "btn generic-button command-button" %>
 </div>
