--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "container">
   <h2> Rsvp</h2>
+  <h5 class="rsvp-date">Please RSVP by Friday 20 January 2017</h5>
   <div class="hr"></div>
-  <h5><i> Please RSVP by Friday 20 January 2017 </i></h5>
   <%= render "form" %>
 </div>
