--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -19,7 +19,7 @@
   width: 6px;
   margin: 0 auto;
   padding-top: 50px;
-  background: $pink;
+  background: $white;
 }
 
 .timeline ul li::after {
@@ -40,8 +40,8 @@
   bottom: 0;
   width: 400px;
   padding: 15px;
-  background: $pink;
-  color: $white;
+  background: #f6f6f6;
+  color: $pink;
 }
 
 .timeline ul li div::before {
