--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,27 +1,27 @@
-<div class = "container level-header guest-page">
-  <h2> Guest List </h2>
+<div class="container level-header guest-page">
+  <h2>Guest List</h2>
   <% @guests = locals[:guests] if @guests.nil? %>
-  <div class= "pull-right">
+  <div class="pull-right">
     <%= link_to "Add Guest", new_guest_path, class: "btn generic-button command-button hvr-sweep-to-right", id: "new-guest-link" if current_user && user_signed_in? %>
   </div>
-  <table class = "table table-striped">
+  <table class="table table-striped">
     <thead>
-      <th> First Name </th>
-      <th> Surname </th>
-      <th> Age Category </th>
-      <th> Address </th>
-      <th> Email </th>
+      <th>First Name</th>
+      <th>Surname</th>
+      <th>Age Category</th>
+      <th>Address</th>
+      <th>Email</th>
       <% if current_user %>
-        <th> Administration </th>
+        <th>Administration</th>
       <% end %>
     </thead>
-    <% @guests.sort_by(&:"#{"id"}").each do |guest| %>
+    <% @guests.each do |guest| %>
       <tr>
-        <td> <%= guest.first_name %> </td>
-        <td> <%= guest.surname %> </td>
-        <td> <%= guest.age_category %> </td>
-        <td> <%= guest.address %> </td>
-        <td> <%= guest.email %> </td>
+        <td><%= guest.first_name %></td>
+        <td><%= guest.surname %></td>
+        <td><%= guest.age_category %></td>
+        <td><%= guest.address %></td>
+        <td><%= guest.email %></td>
         <% if current_user && user_signed_in? %>
           <td><%= link_to "Edit", edit_guest_path(id: guest.id), class: "btn generic-button command-button hvr-sweep-to-right", id: "edit-guest-link" %>
           <%= link_to "Delete", guest_path(guest), method: :delete,
