--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -1,38 +1,14 @@
 <div class="container">
-  <h2> Accomodation </h2>
+  <h2>Accomodation</h2>
   <div class="hr"></div>
   <div class="row">
-    <div class="col-sm-4 col-xs-12">
-      <div class="hotel-item">
-        <%= image_tag("angus-inn.jpg", :alt => "angus-inn", width: "100%", height: "250") %>
-          <h2 class="subheading"><%= link_to "Angus Inn", "http://www.angusinn.co.nz/accommodation", class: "subheading" %></h2>
-          <span class="rating">
-            <i class="fa fa-star rating"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-          </span>
-          <p> Corner of Cornwall Streets & Waterloo Road, Lower Hutt </p>
+    <% @accomodation.each do |a| %>
+      <div class="columns large-4">
+        <% @photo = a["photo"] %>
+        <img class="img-responsive tidy-img" src="/images/<%=@photo%>">
+        <h4><%= link_to "#{a["name"]}", "#{a["url"]}"%></h4>
+        <h5><%= a["address"] %></h5>
       </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="hotel-item">
-        <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: "100%", height: "250") %>
-          <h2 class="subheading"><%= link_to "Boulcott Lodge Inn", "http://www.boulcottlodge.co.nz/accommodation.html", class: "subheading" %></h2>
-          <span class="rating">
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-          </span>
-          <p> 615 High Street </p>
-          <p> Lower Hutt </p>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="hotel-item">
-        <%= image_tag("green-gables.jpg", :alt => "green-gables", width: "100%", height: "250") %>
-          <h2 class="subheading"><%= link_to "Green Gables Motel", "http://greengablesmotel.co.nz/rooms", class: "subheading" %></h2>
-          <span class="rating">
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-          </span>
-          <p> 560 High Street
-          <p> Lower Hutt </p>
-      </div>
-    </div>
+    <% end %>
   </div>
 </div>
