--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,24 +3,24 @@
     <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
     <ul class="nav-list navbar-nav pull-right">
       <% if current_user %>
-        <li class=<%= "active" if current_page?(rsvps_path) %>><%= link_to "Rsvp", rsvps_path, class: "hvr-sweep-to-right" %></li>
-        <li class=<%= "active" if current_page?(guests_path) %>><%= link_to "Guests", guests_path, class: "hvr-sweep-to-right"%></li>
-        <li class=<%= "active" if current_page?(gift_registry_path) %>><%= link_to "Gifts", gift_registry_path, class: "hvr-sweep-to-right"%></li>
-        <li class=<%= "active" if current_page?(cgs_path) %>><%= link_to "Claimed Gifts", cgs_path, class: "hvr-sweep-to-right"%></li>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "hvr-sweep-to-right" %></li>
+        <li class=<%= "active" if current_page?(rsvps_path) %>><%= link_to "Rsvp", rsvps_path %></li>
+        <li class=<%= "active" if current_page?(guests_path) %>><%= link_to "Guests", guests_path %></li>
+        <li class=<%= "active" if current_page?(gift_registry_path) %>><%= link_to "Gifts", gift_registry_path %></li>
+        <li class=<%= "active" if current_page?(contributions_path) %>><%= link_to "Contributions", contributions_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
       <% else %>
-        <li class=<%= "active" if current_page?(welcome_path) %>><%= link_to "Home", welcome_path, class: "hvr-sweep-to-right"%></li>
-        <li class=<%= "active" if current_page?(gift_registry_path) %>><%= link_to "Gift Registry", gift_registry_path, class: "hvr-sweep-to-right"%></li>
-        <li class=<%= "active" if current_page?(new_rsvp_path) %>><%= link_to "Rsvp", new_rsvp_path, class: "hvr-sweep-to-right" if !current_user %></li>
+        <li class=<%= "active" if current_page?(welcome_path) %>><%= link_to "Home", welcome_path %></li>
+        <li class=<%= "active" if current_page?(gift_registry_path) %>><%= link_to "Gift Registry", gift_registry_path %></li>
+        <li class=<%= "active" if current_page?(new_rsvp_path) %>><%= link_to "Rsvp", new_rsvp_path if !current_user %></li>
         <li>
           <a href="#" class="dropdown-title" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">The Details</a>
           <ul class="nav-dropdown">
-            <li><%= link_to "Accomodation", accomodation_path, class: 'dropdown-link' %></li>
-            <li><%= link_to "Contact Us", contact_us_path, class: 'dropdown-link' %></li>
-            <li><%= link_to "FAQ", faq_path, class: 'dropdown-link' %></li>
-            <li><%= link_to "Our Story", our_story_path, class: 'dropdown-link' %></li>
-            <li><%= link_to "People", people_path, class: 'dropdown-link' %></li>
-            <li><%= link_to "The Details", the_details_path, class: 'dropdown-link' %></li>
+            <li><%= link_to "Accomodation", accomodation_path, class: "dropdown-link" %></li>
+            <li><%= link_to "Contact Us", contact_us_path, class: "dropdown-link" %></li>
+            <li><%= link_to "FAQ", faq_path, class: "dropdown-link" %></li>
+            <li><%= link_to "Our Story", our_story_path, class: "dropdown-link" %></li>
+            <li><%= link_to "People", people_path, class: "dropdown-link" %></li>
+            <li><%= link_to "The Details", the_details_path, class: "dropdown-link" %></li>
           </ul>
         </li>
       <% end %>
