Minor fixes to css and wrong text displayed

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -62,6 +62,6 @@ a:active {
   margin-left: 15px;
 }
 
-#send-message-link {
+#send-message-link, #save-contribution-link {
   margin-left: 50px;
 }
