--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -19,7 +19,7 @@
   width: 6px;
   margin: 0 auto;
   padding-top: 50px;
-  background: $white;
+  background: $pink;
 }
 
 .timeline ul li::after {
