Fix css for rsvp submit link

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -58,10 +58,6 @@ a:active {
   margin-left: -15px;
 }
 
-#rsvp-submit-link {
-  margin-left: 15px;
-}
-
-#send-message-link, #save-contribution-link {
+#send-message-link, #save-contribution-link, #rsvp-submit-link {
   margin-left: 50px;
 }
