--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 @import "fonts";
 @import "timeline";
 @import "forms";
+@import "owl";
 
 .body-style{
   padding-top: 70px;
@@ -33,6 +34,12 @@ body {
   font-size: 16px;
   color: $black;
   padding-top:50px;
+  overflow-x: hidden;
+  padding-bottom: 50px;
+}
+
+p {
+  color: $black;
 }
 
 .dropdown-title {
@@ -75,9 +82,7 @@ body {
   background-color: $white
 }
 
-p {
-  color: $black;
-}
+
 
 .row {
   margin-left: -15px;
@@ -94,72 +99,6 @@ p {
   max-height: 100%;
   margin: auto;
   overflow: auto;
-}
-
-.event-item {
-  font-size: 22px;
-  font-weight: 700;
-  color: $pink;
-  margin: 0 auto;
-  text-transform: uppercase;
-  text-align: left;
-  background-color: #fafafa;
-  border: 1px solid #eee;
-  margin-top: 30px;
-  font-family: 'Avenir', sans-serif;
-}
-
-.hotel-item {
-  font-size: 18px;
-  font-weight: 700;
-  margin: 0;
-  text-transform: uppercase;
-  text-align: left;
-  background-color: #fafafa;
-  border: 1px solid #eee;
-  margin-top: 20px;
-  bottom: 0;
-  left: 0;
-  height: 450px;
-}
-
-.rating{
-  color: $yellow;
-}
-
-#owl-demo .item{
-  margin: 3px;
-}
-#owl-demo .item img{
-  display: block;
-  width: 100%;
-  height: 300px;
-}
-
-#owl-demo .item h4, .people-item .description h3, .bs .description h3 {
-  font-size: 18px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #6a6a6a;
-  margin: 0 0 -2px 0;
-  text-align: left;
-}
-
-.people-item {
-  display: block;
-  margin: 0 0 20px;
-  color: #6a6a6a;
-}
-
-#owl-demo .item .description, .people-item .description, .bs .description {
- padding: 26px 0 30px 35px;
-}
-
-#owl-demo .item, .people-item, .bs {
-  margin: 15px;
-  border: 1px solid #f5f5f5;
-  background-color: #fafafa;
-  text-align: left;
 }
 
 .people-carousel .item .description, .people-item .description, .bs .description {
@@ -186,11 +125,6 @@ p {
   }
 }
 
-.image-size {
-  width: 180px;
-  height: 180px;
-}
-
 .cross-off-gift-modal {
   display: inline-block;
   text-align: left;
@@ -205,10 +139,7 @@ p {
   box-sizing: border-box;
 }
 
-body {
-  overflow-x: hidden;
-  padding-bottom: 50px;
-}
+
 
 time {
   font-weight: bold;
@@ -228,14 +159,6 @@ time {
   position: relative;
   top: 50%;
   vertical-align: bottom;
-}
-
-.lined-gift {
-  text-decoration: line-through
-}
-
-.all-details {
-  padding-left: 180px;
 }
 
 .question {
