--- a/app/views/pages/_main_people.html.erb
+++ b/app/views/pages/_main_people.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div id="owl-demo" class="owl-carousel">
       <% @main_people.each do |d| %>
-        <div class="item">
+        <div class="owl-item">
           <% @photo = d["photo"] %>
           <%= image_tag(@photo, class: "img-responsive") %>
           <div class = "description">
