--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,51 +1,10 @@
-nav {
-  a:link {
-    color: $white;
-  }
-  a:visited {
-    color: $white;
-  }
-  a:hover {
-    color: $white;
-  }
-  a:active {
-    color: $white;
-  }
-}
-.generic-button {
-  float: right;
-  margin-left: 1rem;
-  font-size: 1rem;
-  line-height: 1rem;
-  height: 2.3rem;
-  border-radius: 4px;
-  border: 1px solid #bbb;
-  color: #555;
-  text-transport: uppercase;
-  text-decoration: none;
-  text-align: center;
-  white-space: nowrap;
-  background-color: transparent;
-}
-
-.command-button {
-  color: $black;
-  font-size: 1.5rem;
-  margin-right: 1rem;
-  margin-left: 0rem;
-  background-color: $white;
-  float: left;
-  height: 3.1rem;
-  width: 14.5rem;
-}
-
-.cancel-button {
+#cancel-button {
   margin-top: 20px;
   bottom: 0px;
   line-height: 4em;
 }
 
-.contribute-button {
+#cross-gift-link, #rsvp-submit-link {
   margin-left: -15px;
 }
 
