--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -7,6 +7,6 @@
     <%= button_tag(type: "submit", class: "hollow button", id: "save-contribution-link", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
       <i class="glyphicon glyphicon-floppy-saved"></i> Save
     <% end %>
-    <%= link_to "Cancel", gift_registry_path, class: "cancel-button" %>
+    <%= link_to "Cancel", gift_registry_path, id: "cancel-button" %>
   <% end %>
 </div>
