--- a/app/views/pages/gift_registry.html.erb
+++ b/app/views/pages/gift_registry.html.erb
@@ -1,4 +1,4 @@
-<div class="container level-header gift-page">
+<div class="container">
   <h2>Gift Registry</h2>
   <div class="hr"></div>
   <div class="row">
@@ -9,6 +9,6 @@
     <p>Our account number is <i> 03-0515-0011251-01 (IAIN RHODES WALKER & TANIA LILIAN JACOB)</i>.Please record your name in the Reference field whilst transferring your contribution. We really appreciate your generosity and look forward to seeing you on February 25th. If you have any questions please feel free to contact us via this website.</p>
     <p>Love Iain and Tania</p>
   </div>
-  <p><%= link_to "Contribute Gift", cross_off_gift_path, class: "hollow button contribute-button" , id: "cross-gift-link", remote: :true, data: { toggle: "modal", target: "#modal-window" } %></p>
+  <p><%= link_to "Contribute Gift", cross_off_gift_path, class: "hollow button" , id: "cross-gift-link", remote: :true, data: { toggle: "modal", target: "#modal-window" } %></p>
   <div id="modal-window" class="modal" role="dialog" aria-labelledby="myModalLabel" ></div>
 </div>
