--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Our Story </h2>
+  <h2>Our Story</h2>
   <div class="hr"></div>
   <section class="timeline">
     <ul>
@@ -7,6 +7,7 @@
         <div>
           <time>11 MARCH 2010</time>
           <p class="para-text">Iain and Tania met at ENGR101 Labs after being place in the same lab group.</p></div>
+        </div>
       </li>
       <li>
         <div>
