--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -25,7 +25,7 @@
       <% end %>
       <%= f.text_field :dietary_requirements, placeholder: "Enter any special dietary requirements", class: "form-control", label: "Dietary Requirements" %>
     </div>
-    <%= button_tag(type: "submit", class: "hollow button contribute-button", id: "rsvp-submit-link", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Submitting..."}) do %>
+    <%= button_tag(type: "submit", class: "hollow button", id: "rsvp-submit-link", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Submitting..."}) do %>
       <i class="fa fa-save"></i>Submit
     <% end %>
   <% end %>
